style: make code concise